# recruitr

./: .gitignore  .replit  database.py  example_usage.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md  test_check_candidates.py  test_db_columns.py  test_embeddings.py  test_job_applications.py  test_job_status.py  test_semantic_matching.py  test_upload_endpoints.py  test_verify_embedding.py
attached_assets/: (99+) Job Details _ LinkedIn_1761698046480.html  Pasted--YOUR-ACTION-Tell-Replit-Agent-Add-post-upload-modal-for-job-selection-with-checkbox-li-1761706539257_1761706539258.txt  Pasted-1-AI-Profile-Analysis-but-nothing-to-analyze-yet-2-Materials-List-oh-here-s-the-data-3-Uplo-1761528880219_1761528880220.txt  Pasted-Add-Company-Culture-Survey-to-Company-Profile-BACKEND-DATABASE-database-py-Create-new-table-co-1761694056663_1761694056664.txt  Pasted-Build-job-application-system-with-many-to-many-candidate-job-relationships-BACKEND-DATABASE-datab-1761705593178_1761705593178.txt  Pasted-Enhance-job-creation-to-support-fully-configurable-multi-level-evaluation-pipeline-BACKEND-app-ro-1761620166720_1761620166721.txt  Pasted-Fix-job-description-display-formatting-it-s-showing-plain-text-with-no-styling-PROBLEM-The-Desc-1761697064575_1761697064575.txt  Pasted-I-ll-create-a-comprehensive-candidate-detail-page-with-all-the-sections-you-requested-This-will-be--1761510004927_1761510004927.txt  Pasted-Improve-job-display-formatting-and-add-screening-questions-to-import-1-ENHANCE-HTML-FORMATTING-IN-1761693359109_1761693359110.txt  (+6 more)
frontend/: package-lock.json  (+1 more)
(+45 files in other folders)
