[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pdfplumber==0.10.3",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
